--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.1.1",
     "rich>=14.2.0",
+    "slowapi>=0.1.9",
     "uvicorn[standard]>=0.38.0",
 ]
 
