Introduce async database support with aiosqlite and overhaul Todos API
- Replace synchronous SQLite operations with aiosqlite for async database connections in `app/shared/db.py` and `app/repositories/todo_repository.py`.
- Add async methods for database initialization and token creation (`init_db_async`, `ensure_auth_token_async`).
- Refactor `TodoService` and Todos API endpoints to fully support async repository and service layers.
- Update `uv.lock` and `pyproject.toml` to include `aiosqlite` as a dependency.
- Add `_maybe_await` utility in `TodoService` to ensure compatibility with sync repositories in unit tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Endpoints Todos in fastapi"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiosqlite>=0.21.0",
     "fastapi[all]>=0.119.0",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
