--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "rich>=14.2.0",
     "slowapi>=0.1.9",
     "uvicorn[standard]>=0.38.0",
+    "secure>=0.3.0",
 ]
 
 [dependency-groups]
