Add support for dotenv preload and additional async database drivers
- Preload `.env` files using `python-dotenv` for better environment variable management across non-pydantic consumers.
- Integrate `aiomysql` and `asyncpg` dependencies for MySQL and PostgreSQL backend support.
- Update `pyproject.toml` and `uv.lock` with new driver dependencies.
- Refactor async SQLite URL construction for better maintainability and handling.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiosqlite>=0.21.0",
+    "aiomysql>=0.2.0",
+    "asyncpg>=0.29.0",
     "sqlalchemy[asyncio]>=2.0.36",
     "alembic>=1.13.3",
     "fastapi[all]>=0.119.0",
