Refactor Docker setup and update `.dockerignore`
- Create UV stage in `Dockerfile` for reusable static references.
- Update `.dockerignore` to exclude `env/` instead of `.env`.
- Adjust volume mapping in `docker-compose.yaml` to prevent shadowing of `run.py` and the virtual environment.
- Expose port `8000` to sync with updated `docker-compose.yaml` port configuration.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,12 +9,14 @@ services:
       - TZ=America/Caracas
     container_name: api_todo
     ports:
-      - 9000:9000
+      - 8000:8000
     networks:
       - api_todo_network
     volumes:
       - './logs:/app/logs'
-      - './app:/app/'
+      # Mount only the application source inside /app/app to avoid shadowing run.py and the virtualenv
+      - './app:/app/app'
+      - './.env:/app/.env:ro'
 
     restart: always
 
