Add Redis caching support for Todos APIs
- Introduce `RedisSettings` for managing Redis environment variables.
- Add dependency-injected Redis client to the app using `aioredis`.
- Implement caching for `get_todos`, `get_todo`, `create_todo`, `update_todo`, and `delete_todo` endpoints.
- Update `docker-compose.yaml` to include a Redis service.
- Add Redis client initialization and auxiliary cache utility functions (`_cache_get_json`, `_cache_set_json`, `_cache_delete`).
- Update project dependencies in `pyproject.toml` and `uv.lock` to include `redis`.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,10 +17,17 @@ services:
       # Mount only the application source inside /app/app to avoid shadowing run.py and the virtualenv
       - './app:/app/app'
       - './.env:/app/.env:ro'
-
+    depends_on:
+      - redis
     restart: always
 
-
+  redis:
+    image: redis:7-alpine
+    container_name: redis
+    networks:
+      - api_todo_network
+    command: ["redis-server", "--appendonly", "yes"]
+    restart: always
 
 networks:
   api_todo_network:
