Add PostgreSQL support and refactor authentication to use async ORM
- Add PostgreSQL initialization script (`init_postgres.sql`) for enum and table creation.
- Introduce PostgreSQL service in `docker-compose.yaml`, including health checks and environment variables.
- Update `app/shared/db.py` with Postgres-specific strategy for database backend selection.
- Refactor `auth.py` to use SQLAlchemy's AsyncSession for token validation.
- Replace synchronous DB connections in auth dependencies with async counterparts.
- Add support for dynamic volume mapping and initial schema setup in Docker environment.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
       - './.env:/app/.env:ro'
     depends_on:
       - redis
+      - postgres
     restart: always
 
   redis:
@@ -29,6 +30,34 @@ services:
     command: ["redis-server", "--appendonly", "yes"]
     restart: always
 
+  postgres:
+    image: postgres:16-alpine
+    container_name: postgres
+    environment:
+      - POSTGRES_DB=todos
+      - POSTGRES_USER=todos
+      - POSTGRES_PASSWORD=secret
+      - TZ=America/Caracas
+    # Do not expose Postgres on the host by default to avoid port conflicts.
+    # If you need host access from the host machine, set POSTGRES_HOST_PORT in .env
+    # and uncomment the ports block below (defaults to 55432 if not set).
+    ports:
+      - ${POSTGRES_HOST_PORT:-55432}:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+      - ./sql/init_postgres.sql:/docker-entrypoint-initdb.d/init.sql:ro
+    networks:
+      - api_todo_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: always
+
 networks:
   api_todo_network:
     driver: bridge
+
+volumes:
+  pgdata:
