--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "uvicorn[standard]>=0.38.0",
     "secure>=0.3.0",
     "redis>=5.0.0",
+    "celery>=5.4,<6",
 ]
 
 [dependency-groups]
