--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,16 @@ dependencies = [
 [dependency-groups]
 dev = [
     "pytest>=8.4.2",
+    "pytest-cov>=5.0.0",
 ]
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+addopts = [
+    "-q",
+    "--cov=app",
+    "--cov-report=term-missing:skip-covered",
+    "--cov-report=xml",
+    "--cov-report=html",
+]
+testpaths = ["tests"]
