--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "secure>=0.3.0",
     "redis>=5.0.0",
     "celery>=5.4,<6",
+    "fastapi-mcp>=0.4.0",
 ]
 
 [dependency-groups]
