--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,46 @@ TODO_DB_FILENAME=todos.db
 # - To use MySQL, set DB_ENGINE=mysql and adjust DB_PORT=3306 (or your port), DB_USER, DB_PASSWORD, DB_NAME.
 # - To use PostgreSQL, set DB_ENGINE=postgresql and set DB_PORT=5432, DB_USER, DB_PASSWORD, DB_NAME.
 # - Alternatively, set a full DATABASE_URL and ignore the granular pieces above.
+
+# ----------------------------------------------------------------------------
+# Redis configuration (caching and rate limiting)
+# ----------------------------------------------------------------------------
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+
+# ----------------------------------------------------------------------------
+# Celery configuration (async task processing)
+# ----------------------------------------------------------------------------
+# Broker URL for task queue (RabbitMQ, Redis, etc.)
+# Examples:
+#   RabbitMQ: pyamqp://guest@localhost//
+#   Redis:    redis://localhost:6379/0
+CELERY_BROKER_URL=pyamqp://guest@localhost//
+
+# Result backend for storing task results
+CELERY_RESULT_BACKEND=rpc://
+
+# Execute tasks synchronously (useful for testing, set to true in test environments)
+CELERY_TASK_ALWAYS_EAGER=false
+
+# ----------------------------------------------------------------------------
+# JWT Authentication
+# ----------------------------------------------------------------------------
+# Secret key for JWT token signing
+# IMPORTANT: Change this to a secure random key in production!
+# Generate one with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+JWT_SECRET_KEY=change-this-to-a-secure-random-key-in-production-min-32-chars
+
+# JWT signing algorithm (HS256 is recommended for symmetric keys)
+JWT_ALGORITHM=HS256
+
+# JWT token expiration time in minutes (default: 43200 = 30 days)
+JWT_EXPIRATION_MINUTES=43200
+
+# ----------------------------------------------------------------------------
+# Application Settings
+# ----------------------------------------------------------------------------
+# Enable debug mode (verbose logging, detailed error messages)
+# WARNING: Set to false in production!
+DEBUG=false
