Introduce refresh token support and enhance token lifecycle management
- Add refresh token flow with support for token rotation and expiration.
- Update `/auth/refresh` endpoint to revoke old tokens and generate new ones.
- Separate configuration for access and refresh token expiration durations (`JWT_ACCESS_TOKEN_EXPIRE_MINUTES`, `JWT_REFRESH_TOKEN_EXPIRE_DAYS`).
- Update `auth` module to use refresh tokens for longer session management.
- Introduce `RefreshTokenORM` for secure database storage of refresh tokens.
- Add test coverage for end-to-end refresh token functionality and invalid scenarios.
- Enhance CORS configuration with environment-based settings for improved security.
- Refactor middleware to restrict CORS origins, methods, and headers as per environment.

--- a/.env.example
+++ b/.env.example
@@ -72,8 +72,30 @@ JWT_SECRET_KEY=change-this-to-a-secure-random-key-in-production-min-32-chars
 # JWT signing algorithm (HS256 is recommended for symmetric keys)
 JWT_ALGORITHM=HS256
 
-# JWT token expiration time in minutes (default: 43200 = 30 days)
-JWT_EXPIRATION_MINUTES=43200
+# Access token expiration time in minutes (default: 30 minutes)
+# Short-lived tokens are more secure
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Refresh token expiration time in days (default: 30 days)
+# Refresh tokens are used to obtain new access tokens without re-authentication
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=30
+
+# ----------------------------------------------------------------------------
+# CORS Configuration (Cross-Origin Resource Sharing)
+# ----------------------------------------------------------------------------
+# Allowed origins (comma-separated list)
+# Default: local development only
+# For production, set to your frontend domain(s): https://yourdomain.com,https://www.yourdomain.com
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000,http://127.0.0.1:3000,http://127.0.0.1:8000
+
+# Allow credentials (cookies, authorization headers)
+CORS_ALLOW_CREDENTIALS=true
+
+# Allowed HTTP methods (comma-separated)
+CORS_ALLOW_METHODS=GET,POST,PUT,DELETE,PATCH,OPTIONS
+
+# Allowed headers (* for all, or comma-separated list)
+CORS_ALLOW_HEADERS=*
 
 # ----------------------------------------------------------------------------
 # Application Settings
