Add structured logging support with , enhanced middleware, and documentation
- Introduce  for structured logging with Rich console output and JSON file formatting.
- Update logging middleware for request/response tracking, latency measurement, and error handling.
- Add  with centralized configuration for logs directory, processors, and handlers.
- Extend dependencies (, ) for improved logging functionality.
- Include detailed logging documentation in  for usage, best practices, and troubleshooting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "redis>=5.0.0",
     "celery>=5.4,<6",
     "pyjwt>=2.8.0",
+    "structlog>=25.5.0",
+    "colorama>=0.4.6",
 ]
 
 [dependency-groups]
