Add rate limiting support using SlowAPI and update configuration
- Introduce global rate limiting using SlowAPI with Redis as the default storage backend.
- Add per-endpoint rate limits for key `/auth` and health check routes.
- Extend configuration with rate limiting options (default limits, exempt IPs, and paths).
- Update `.env.example` and related setup for rate limiting configuration.
- Refactor rate limiter to consider exempt IPs and paths.

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,17 @@ REDIS_PORT=6379
 REDIS_DB=0
 
 # ----------------------------------------------------------------------------
+# Rate limiting (SlowAPI)
+# ----------------------------------------------------------------------------
+# Default limits applied to all endpoints unless overridden with @limiter.limit
+# Comma-separated if you want to stack multiple windows, e.g., "100/minute, 1000/hour"
+RATE_LIMIT_DEFAULTS=100/minute
+# IPs exempt from rate limiting (useful for local dev/tests)
+RATE_LIMIT_EXEMPT_IPS=127.0.0.1,::1
+# Exact paths exempt from rate limiting (docs/openapi by default)
+RATE_LIMIT_EXEMPT_PATHS=/docs,/redoc,/openapi.json
+
+# ----------------------------------------------------------------------------
 # Celery configuration (async task processing)
 # ----------------------------------------------------------------------------
 # Broker URL for task queue (RabbitMQ, Redis, etc.)
