--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -127,6 +127,21 @@ services:
       retries: 5
     restart: always
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    command:
+      - --config.file=/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    depends_on:
+      - api_todo
+    networks:
+      - api_todo_network
+    restart: always
+
 networks:
   api_todo_network:
     driver: bridge
