Add Grafana dashboards and provisioning for observability
- Introduce Grafana setup with Prometheus datasource provisioning in `grafana/provisioning/datasources/datasource.yaml`.
- Add a pre-configured dashboard "FastAPI Todos - Overview" with HTTP and database metrics in `grafana/provisioning/dashboards/fastapi_todos_overview.json`.
- Extend `docker-compose.yaml` with Grafana service and configuration.
- Update `.env.example` with environment variables for Grafana and Prometheus settings.
- Update README with instructions for running Prometheus and Grafana stack for observability.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 # Options: develop, staging, qa, prod
 APP_ENV=develop
 
+# System timezone used by all dockerized services (recommended)
+# Example: America/Caracas
+TZ=America/Caracas
+
 # ----------------------------------------------------------------------------
 # Database configuration
 # Choose the engine via DB_ENGINE. Supported: sqlite, mysql, postgresql
@@ -55,7 +59,7 @@ RATE_LIMIT_DEFAULTS=100/minute
 # IPs exempt from rate limiting (useful for local dev/tests)
 RATE_LIMIT_EXEMPT_IPS=127.0.0.1,::1
 # Exact paths exempt from rate limiting (docs/openapi by default)
-RATE_LIMIT_EXEMPT_PATHS=/docs,/redoc,/openapi.json
+RATE_LIMIT_EXEMPT_PATHS=/docs,/redoc,/openapi.json,/metrics
 
 # ----------------------------------------------------------------------------
 # Celery configuration (async task processing)
@@ -107,6 +111,19 @@ CORS_ALLOW_METHODS=GET,POST,PUT,DELETE,PATCH,OPTIONS
 
 # Allowed headers (* for all, or comma-separated list)
 CORS_ALLOW_HEADERS=*
+
+# ----------------------------------------------------------------------------
+# Observability (Prometheus + Grafana)
+# ----------------------------------------------------------------------------
+# Prometheus UI port on host
+PROMETHEUS_PORT=9090
+# Grafana web UI port on host
+GRAFANA_PORT=3000
+# Optional: Traefik dashboard port on host
+TRAEFIK_DASHBOARD_PORT=8099
+# Grafana admin credentials (change in production!)
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
 
 # ----------------------------------------------------------------------------
 # Application Settings
